feat(schedule):重构触发器模块为任务调度模块
- 将触发器相关页面和组件迁移至 Schedule 模块下，并重命名 TriggerForm 和 TriggerList 为调度模块组件
- 更新中英文国际化词条，新增任务调度相关字段（如 job、jobType、jobName 等），并调整部分术语表达- 修改 Trigger 类型定义，使用枚举值 'SCHEDULED' 和 'EVENT' 替代原 'cron' 和 'event'，统一类型命名
- 引入真实 API 接口替换原有 mock 数据逻辑，支持分页查询、创建、更新、删除及立即执行功能
- 调整表单结构与校验规则，增加 job 类型与名称选择器，移除 flowId 相关字段- 更新路由配置，将原 /trigger 路径指向新的 Schedule 页面，菜单图标与翻译键同步调整

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -416,11 +416,15 @@
   "flow_mgr": "Flow Management",
   "flow_design": "Flow Design",
   "flow_instance": "Flow Instance Monitoring",
+  "schedule": "Schedule",
   "trigger": {
     "title": "Trigger",
     "create": "Create Trigger",
     "edit": "Edit Trigger",
-    "type_cron": "Scheduled Trigger",
+    "type_scheduled": "Scheduled Trigger",
+    "job":"Job",
+    "job_type":"Job Type",
+    "job_name":"Job Name",
     "type_event": "Event Trigger",
     "form": "Trigger Form",
     "form_interval": "Interval Trigger",
@@ -472,8 +476,11 @@
     "mutation_update": "Update",
     "mutation_delete": "Delete",
     "time_range": "Time Range",
-    "flow_name": "Flow Name",
-    "select_flow": "Please select execute action"
+    "select_job_type": "Please select job type",
+    "select_job_name": "Please select job name",
+    "execute_success": "Execute successfully",
+    "execute_failed": "Execute failed",
+    "execute": "Execute Now"
   },
   "status_updated_success": "Status updated successfully",
   "status_update_failed": "Status update failed",
