--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -416,11 +416,15 @@
   "flow_mgr": "流程管理",
   "flow_design": "流程设计",
   "flow_instance": "流程实例监控",
+  "schedule": "任务调度",
   "trigger": {
     "title": "触发器",
     "create": "创建触发器",
     "edit": "编辑触发器",
-    "type_cron": "定时触发",
+    "type_scheduled": "定时触发",
+    "job":"任务",
+    "job_type":"任务类型",
+    "job_name":"任务名称",
     "type_event": "事件触发",
     "form": "触发形式",
     "form_interval": "间隔触发",
@@ -472,8 +476,11 @@
     "mutation_update": "修改",
     "mutation_delete": "删除",
     "time_range": "时间范围",
-    "flow_name": "流程名称",
-    "select_flow": "请选择执行动作"
+    "select_job_type": "请选择任务类型",
+    "select_job_name": "请选择任务名称",
+    "execute_success": "执行成功",
+    "execute_failed": "执行失败",
+    "execute": "立即执行"
   },
   "status_updated_success": "状态更新成功",
   "status_update_failed": "状态更新失败",
