feat(schedule): 添加任务执行日志功能并优化触发器表单配置
- 在调度模块中新增任务执行日志列表页面，支持查看任务的执行状态、时长和详细信息
-优化触发器表单组件，支持事件触发模式的简化配置和只读展示
- 调整实体视图页面，增加触发器选项卡并引入 TriggerWrapper 组件
- 更新中英文国际化文案，移除每日时间段相关字段，新增任务执行日志相关翻译
-重构 TriggerList 和 TriggerForm 组件以支持事件触发模式的传参控制
- 在 Schedule 主页面使用 TabPageContainer 实现触发器和任务日志的标签页切换功能

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -429,11 +429,9 @@
     "form": "Trigger Form",
     "form_interval": "Interval Trigger",
     "form_cron": "Cron Expression",
-    "form_daily_time_interval": "Daily Time Range",
     "select_form": "Please select trigger form",
     "interval_trigger": "Interval Trigger",
     "cron_trigger": "Cron Trigger",
-    "daily_time_interval_trigger": "Daily Time Interval Trigger",
     "enter_name": "Please enter trigger name",
     "enter_description": "Please enter trigger description",
     "select_type": "Please select trigger type",
@@ -602,5 +600,6 @@
   "model": "Model",
   "select_model": "Select Model",
   "description": "Description",
-  "status": "Status"
+  "status": "Status",
+  "job_execution_log": "Job Execution Log"
 }
