--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -422,18 +422,16 @@
     "create": "创建触发器",
     "edit": "编辑触发器",
     "type_scheduled": "定时触发",
-    "job":"任务",
-    "job_type":"任务类型",
-    "job_name":"任务名称",
+    "job": "任务",
+    "job_type": "任务类型",
+    "job_name": "任务名称",
     "type_event": "事件触发",
     "form": "触发形式",
     "form_interval": "间隔触发",
     "form_cron": "Cron表达式",
-    "form_daily_time_interval": "每日时间段",
     "select_form": "请选择触发形式",
     "interval_trigger": "间隔触发",
     "cron_trigger": "Cron触发",
-    "daily_time_interval_trigger": "每日时间间隔触发",
     "enter_name": "请输入触发器名称",
     "enter_description": "请输入触发器描述",
     "select_type": "请选择触发器类型",
@@ -602,5 +600,6 @@
   "model": "模型",
   "select_model": "选择模型",
   "description": "描述",
-  "status": "状态"
+  "status": "状态",
+  "job_execution_log": "任务执行日志"
 }
