``` feat(console): 添加控制台组件及完整功能实现新增控制台组件，支持 WebSocket 实时日志展示、日志级别过滤、关键词搜索、字体缩放、显示条数限制、拖动调整高度、始终置底、性能监控等功能。同时在 Header 中添加控制台开关按钮，并在 PageLayout 中集成控制台组件。新增多语言支持（中英文）及相关 Hook 和服务逻辑。 ```

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -601,5 +601,45 @@
   "select_model": "Select Model",
   "description": "Description",
   "status": "Status",
-  "job_execution_log": "Job Execution Log"
+  "job_execution_log": "Job Execution Log",
+  "console_test": "Console Test",
+  "console": {
+    "title": "Console",
+    "logs_count": "{{count}} logs",
+    "showing_last": "Showing last {{displayLimit}} of {{total}}",
+    "search_placeholder": "Search logs...",
+    "level_all": "All",
+    "level_error": "Error",
+    "level_warn": "Warn",
+    "level_info": "Info",
+    "level_debug": "Debug",
+    "limit_items": "{{count}} items",
+    "limit_all": "All",
+    "font_size": "Font size",
+    "test_connection": "Test connection",
+    "disconnect": "Disconnect",
+    "connect": "Connect",
+    "stay_at_bottom_on": "Stay at bottom: ON",
+    "stay_at_bottom_off": "Stay at bottom: OFF",
+    "no_logs": "No logs",
+    "drag_to_resize": "Drag to resize console height",
+    "ws_disconnected": "WebSocket disconnected",
+    "connecting": "Connecting...",
+    "ping_sent": "Ping sent",
+    "ws_not_connected": "WebSocket not connected",
+
+    "perf_good": "Good performance",
+    "perf_warning": "Performance warning",
+    "perf_poor": "Poor performance",
+    "unknown": "Unknown",
+    "total_logs": "Total logs",
+    "filtered": "Filtered",
+    "display_limit": "Display limit",
+    "connection_status": "Connection",
+    "connected": "Connected",
+    "disconnected": "Disconnected",
+    "performance_status": "Performance",
+    "suggest_clear_logs": "Suggest clearing logs",
+    "too_many_items_may_affect_perf": "Too many items may affect performance"
+  }
 }
