--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -601,5 +601,45 @@
   "select_model": "选择模型",
   "description": "描述",
   "status": "状态",
-  "job_execution_log": "任务执行日志"
+  "job_execution_log": "任务执行日志",
+  "console": {
+    "title": "控制台",
+    "logs_count": "{{count}} 条日志",
+    "showing_last": "显示最后{{displayLimit}}条，共{{total}}条",
+    "search_placeholder": "搜索日志...",
+    "level_all": "全部",
+    "level_error": "错误",
+    "level_warn": "警告",
+    "level_info": "信息",
+    "level_debug": "调试",
+    "limit_items": "{{count}}条",
+    "limit_all": "全部",
+    "font_size": "字体大小",
+    "test_connection": "测试连接",
+    "disconnect": "断开连接",
+    "connect": "连接",
+    "stay_at_bottom_on": "始终置底：开",
+    "stay_at_bottom_off": "始终置底：关",
+    "no_logs": "暂无日志数据",
+    "drag_to_resize": "拖动调整控制台高度",
+    "ws_disconnected": "已断开WebSocket连接",
+    "connecting": "正在连接...",
+    "ping_sent": "已发送ping测试",
+    "ws_not_connected": "WebSocket未连接",
+
+    "perf_good": "性能良好",
+    "perf_warning": "性能警告",
+    "perf_poor": "性能较差",
+    "unknown": "未知",
+    "total_logs": "总日志数",
+    "filtered": "过滤后",
+    "display_limit": "显示限制",
+    "connection_status": "连接状态",
+    "connected": "已连接",
+    "disconnected": "未连接",
+    "performance_status": "性能状态",
+    "suggest_clear_logs": "建议清空日志",
+    "too_many_items_may_affect_perf": "显示条数较多，可能影响性能"
+  },
+  "console_test": "控制台测试"
 }
