feat(flow):优化流程设计器节点与连线样式及交互
- 统一节点样式使用 Ant Design 主题变量替代硬编码颜色值
- 调整各类节点尺寸、边框、阴影等视觉效果提升美观度
- 连线组件增加悬停状态与动画效果，改善用户体验
- 引入节点目录配置文件供左侧面板和连线菜单共用- 更新节点面板实现逻辑，引用统一的节点配置数据
- 优化节点文字显示与删除按钮样式
- 调整流程图缩放相关功能实现
- 修改本地化文案"WebSocket disconnected"为"已断开连接"

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -623,7 +623,7 @@
     "stay_at_bottom_off": "Stay at bottom: OFF",
     "no_logs": "No logs",
     "drag_to_resize": "Drag to resize console height",
-    "ws_disconnected": "WebSocket disconnected",
+    "ws_disconnected": "Disconnected",
     "connecting": "Connecting...",
     "ping_sent": "Ping sent",
     "ws_not_connected": "WebSocket not connected",
