feat(overview):重构概览页面统计卡片和监控组件
- 添加新的指标类型：流程数量、触发器数量、执行次数、执行成功/失败、请求数量、模型数量-重构 StatisticsCards 组件，支持更丰富的数据展示和分类
- 新增 API 信息、服务编排、任务调度和数据卡片组件
- 修改 UnifiedMonitoring 组件，通过 props 接收监控数据
- 更新 API 日志统计接口返回结构
- 移除旧的 overview服务和相关类型定义
- 调整 GraphQL 编辑器字体大小和样式优化
-修复 API 日志统计数据处理逻辑，增加空值检查

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -640,5 +640,12 @@
     "performance_status": "Performance",
     "suggest_clear_logs": "Suggest clearing logs",
     "too_many_items_may_affect_perf": "Too many items may affect performance"
-  }
+  },
+  "flow_count": "Flow Count",
+  "trigger_count": "Trigger Count",
+  "exec_count":"Exec Count",
+  "exec_success": "Exec Success",
+  "exec_failure": "Exec Failure",
+  "request_count": "Request",
+  "model_count": "Model"
 }
