--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -390,6 +390,8 @@
     "copied": "已复制",
     "preview": "预览",
     "view_source": "查看源码",
+    "auto_layout": "自动布局",
+    "auto_layout_tooltip": "使用算法自动排列节点位置",
     "could_not_load_zip": "无法加载ZIP项目",
     "could_not_read_zip": "无法读取ZIP项目"
   },
