feat(flow): 实现流程实例详情页面
- 新增流程实例详情页，支持查看流程运行时状态- 添加流程节点状态展示组件(FlowNode)，支持多种节点类型渲染
- 实现流程模型解析hook(useFlowParser)，支持自动布局- 添加元素实例状态合并hook(useElementInstanceMerger)- 新增BFS自动布局算法，用于无坐标节点的层级排列- 完善路由配置，新增/flow/instance/:flowInstanceId路径
- 移除旧的FlowInstanceDetail组件
- 更新国际化文案，添加流程实例详情相关翻译
-优化用户任务抽屉中的信息展示内容
-修复API请求参数传递问题，改进getElementInstances服务方法

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -416,6 +416,7 @@
   "flow_mgr": "Flow Management",
   "flow_design": "Flow Design",
   "flow_instance": "Flow Instance Monitoring",
+  "flow_instance_detail":"Flow Instance Detail",
   "schedule": "Schedule",
   "trigger": {
     "title": "Trigger",
