feat(tenant): 添加租户切换功能- 在 Header 组件中新增租户下拉菜单- 实现租户切换逻辑，支持页面刷新重新加载数据 - 新增 Tenant 接口及 getTenants API 服务 - 扩展 appStore 添加租户状态管理 - 在请求拦截器中自动添加 X-Tenant-Id 请求头- 更新中英文本地化文件，添加租户相关翻译 -优化 IndexList 表格滚动高度 - 修改 getCurrentUser 接口路径为 /auth/whoami

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -648,5 +648,10 @@
   "exec_success": "Exec Success",
   "exec_failure": "Exec Failure",
   "request_count": "Request",
-  "model_count": "Model"
+  "model_count": "Model",
+  "tenant": {
+    "select": "Select Tenant",
+    "current": "Current Tenant",
+    "switch": "Switch Tenant"
+  }
 }
