--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -149,7 +149,9 @@
   "no": "否",
   "table_selection_delete_text": "确定删除此项?",
   "new_field": "新建字段",
+  "search_fields": "搜索字段",
   "new_index": "新建索引",
+  "search_indexes": "搜索索引",
   "new_record": "新建记录",
   "edit_field": "编辑字段",
   "edit_index": "编辑索引",
