feat(idp): 将脚本认证类型重命名为 JavaScript- 将所有 "script" 相关命名更新为 "javascript" - 更新表单组件名称和引用从 ScriptIdPForm 到 JsIdPForm- 修改模板常量名称从 SCRIPT_TEMPLATE 到 JAVASCRIPT_TEMPLATE - 更新单选按钮值从 'script' 到 'js'- 更新条件渲染逻辑以匹配新的类型值 - 更新翻译键名从 idp_script 到 idp_javascript- 更新工具提示文本以反映新的命名约定

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -212,8 +212,8 @@
   "idp_discovery_endpoint": "发现端点",
   "idp_client_id": "客户端ID",
   "idp_client_secret": "客户端密钥",
-  "idp_script": "脚本",
-  "idp_script_tooltip": "请编写用于认证的 JavaScript，导出 authenticate(request) 函数",
+  "idp_javascript": "JavaScript",
+  "idp_javascript_tooltip": "请编写用于认证的 JavaScript，导出 authenticate(request) 函数",
   "idp_step_select_provider": "选择认证类型",
   "idp_step_create_provider": "创建身份认证",
   "idp_step_success": "成功",
