feat(script): 添加 Groovy 脚本编辑器支持
- 在 ScriptEditor 组件中引入并注册 Groovy语言支持
- 新增 GroovyIdPForm 组件用于 Groovy 身份认证脚本配置
- 扩展 CreateIdP 组件以支持 Groovy 类型的身份提供者
- 添加 Groovy 脚本模板及语言配置文件 monaco-groovy.ts
- 更新本地化资源以支持 Groovy 相关的界面显示
- 在 IdPView 和主页面中集成 Groovy 表单组件
- 实现 Monaco Editor 对 Groovy语法高亮与代码补全功能的支持

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -215,6 +215,8 @@
   "idp_client_secret": "Client Secret",
   "idp_javascript": "JavaScript",
   "idp_javascript_tooltip": "Write JavaScript for authentication, export authenticate(request)",
+  "idp_groovy": "Groovy",
+  "idp_groovy_tooltip": "Write Groovy script for authentication, export authenticate(request)",
   "idp_step_select_provider": "Select provider",
   "idp_step_create_provider": "Create provider",
   "idp_step_success": "Success",
