feat(api):重构自定义接口管理功能
- 调整接口与文件夹创建弹窗为模态框实现- 新增执行配置组件用于管理API元数据
-优化API详情页布局自适应高度
- 调整标签页默认激活项为自定义接口
- 完善中英文国际化词条配置
-修复GraphQL API标签位置错误
- 统一表单校验提示与错误处理逻辑
- 移除冗余的CreateApiDrawer组件- 增加API路径标准化处理逻辑
- 更新接口管理页签配置结构

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,12 @@
 {
   "api": "API",
+  "apis": {
+    "name": "API Name",
+    "execute_config": "Execute Config",
+    "parent_folder": "Parent Folder",
+    "api_path": "API Path",
+    "method": "Request Method"
+  },
   "api_management": "API Management",
   "open_api": "Open API",
   "api_log": "API Log",
@@ -28,6 +35,9 @@
   "enabled": "Enabled",
   "close": "Close",
   "closed": "Closed",
+  "api_name_required": "Please enter API name",
+  "api_path_required": "Please enter API path",
+  "folder_name_required": "Please enter folder name",
   "config": "Config",
   "conform": "Conform",
   "cancel": "Cancel",
@@ -286,7 +296,7 @@
   "client_ip": "Client IP",
   "error_message": "Error Message",
   "request_log": "Request Log",
-   "path": "Path",
+  "path": "Path",
   "toggle_dark_mode": "Toggle dark mode",
   "dark_mode": "Dark",
   "light_mode": "Light",
@@ -420,16 +430,16 @@
   "flow_mgr": "Flow Management",
   "flow_design": "Flow Design",
   "flow_instance": "Flow Instance Monitoring",
-  "flow_instance_detail":"Flow Instance Detail",
+  "flow_instance_detail": "Flow Instance Detail",
   "schedule": "Schedule",
   "trigger": {
     "title": "Trigger",
     "create": "Create Trigger",
     "edit": "Edit Trigger",
     "type_scheduled": "Scheduled Trigger",
-    "job":"Job",
-    "job_type":"Job Type",
-    "job_name":"Job Name",
+    "job": "Job",
+    "job_type": "Job Type",
+    "job_name": "Job Name",
     "type_event": "Event Trigger",
     "form": "Trigger Form",
     "form_interval": "Interval Trigger",
@@ -631,7 +641,6 @@
     "connecting": "Connecting...",
     "ping_sent": "Ping sent",
     "ws_not_connected": "WebSocket not connected",
-
     "perf_good": "Good performance",
     "perf_warning": "Performance warning",
     "perf_poor": "Poor performance",
@@ -648,7 +657,7 @@
   },
   "flow_count": "Flow Count",
   "trigger_count": "Trigger Count",
-  "exec_count":"Exec Count",
+  "exec_count": "Exec Count",
   "exec_success": "Exec Success",
   "exec_failure": "Exec Failure",
   "request_count": "Request",
