feat(api): 添加API创建和更新信息字段
- 在API详情页面显示创建人、更新人、创建时间和更新时间
- 在编辑表单中增加创建和更新相关信息的字段
- 更新API管理类型定义，添加createdBy、updatedBy、createdAt和updatedAt字段
- 在中英文本地化文件中添加对应翻译键值

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -353,7 +353,11 @@
     "none": "None",
     "children": "Children",
     "enable": "Enable",
-    "disable": "Disable"
+    "disable": "Disable",
+    "created_by": "Created By",
+    "updated_by": "Updated By",
+    "created_at": "Created At",
+    "updated_at": "Updated At"
   },
   "code_view": {
     "config_template_variables": "Configure Template Variables",
