--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -353,7 +353,11 @@
     "none": "无",
     "children": "子项",
     "enable": "启用",
-    "disable": "禁用"
+    "disable": "禁用",
+    "created_by": "创建人",
+    "updated_by": "更新人",
+    "created_at": "创建时间",
+    "updated_at": "更新时间"
   },
   "code_view": {
     "config_template_variables": "配置模板变量",
