--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -223,8 +223,8 @@
   "idp_discovery_endpoint": "Discovery endpoint",
   "idp_client_id": "Client ID",
   "idp_client_secret": "Client Secret",
-  "idp_javascript": "JavaScript",
-  "idp_javascript_tooltip": "Write JavaScript for authentication, export authenticate(request)",
+  "idp_script": "JavaScript",
+  "idp_script_tooltip": "Write JavaScript for authentication, export authenticate(request)",
   "idp_groovy": "Groovy",
   "idp_groovy_tooltip": "Write Groovy script for authentication, export authenticate(request)",
   "idp_step_select_provider": "Select provider",
