--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -222,8 +222,8 @@
   "idp_discovery_endpoint": "发现端点",
   "idp_client_id": "客户端ID",
   "idp_client_secret": "客户端密钥",
-  "idp_javascript": "JavaScript",
-  "idp_javascript_tooltip": "请编写用于认证的 JavaScript，导出 authenticate(request) 函数",
+  "idp_script": "脚本",
+  "idp_script_tooltip": "请编写用于认证的 JavaScript，导出 authenticate(request) 函数",
   "idp_groovy": "Groovy",
   "idp_groovy_tooltip": "请编写用于认证的 Groovy 脚本，导出 authenticate(request) 函数",
   "idp_step_select_provider": "选择认证类型",
