feat(api-management): 添加数据映射脚本启用开关功能
- 在 DataMappingIOConfig 接口中新增 scriptEnabled 字段
- 在 DataMapping 组件中增加脚本启用状态的控制开关
- 更新本地化文件，添加相关文案翻译
- 调整脚本字段显示逻辑，仅在启用时展示编辑器
- 优化状态同步逻辑，确保脚本启用状态准确更新
- 修复可能存在的脚本值未定义问题，增强健壮性

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,7 +5,15 @@
     "execute_config": "Execute Config",
     "parent_folder": "Parent Folder",
     "api_path": "API Path",
-    "method": "Request Method"
+    "method": "Request Method",
+    "data_mapping": {
+      "title": "Data Mapping",
+      "input": "Input Settings",
+      "output": "Output Settings",
+      "input_script": "Execution Script",
+      "output_script": "Execution Script",
+      "script_switch": "Enable execution script"
+    }
   },
   "api_management": "API Management",
   "open_api": "Open API",
