feat(i18n): 区分输入输出脚本的国际化文案

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,9 +10,10 @@
       "title": "Data Mapping",
       "input": "Input Settings",
       "output": "Output Settings",
-      "input_script": "Execution Script",
-      "output_script": "Execution Script",
-      "script_switch": "Enable execution script"
+      "input_script": "Execution input script",
+      "output_script": "Execution output script",
+      "input_script_switch": "Enable input script",
+      "output_script_switch": "Enable output script"
     }
   },
   "api_management": "API Management",
