refactor(custom-api): 重构自定义API编辑面板组件命名和结构
- 重命名 Authorization 组件为 AuthorizationForm
- 重命名 DataMapping 组件为 DataMappingForm
- 重命名 ExecuteConfig 组件为 ExecutionForm
- 更新组件引用路径和导入语句
- 调整编辑面板表单布局结构
- 修改执行配置标签文本从"执行配置"到"执行配置"
- 更新默认激活的标签页key为execution_config
- 移除输入框前缀选择器的包装容器
- 优化表单字段清理逻辑函数sanitizeMeta的位置和调用方式

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,7 +2,7 @@
   "api": "API",
   "apis": {
     "name": "API Name",
-    "execute_config": "Execute Config",
+    "execution_config": "Execute Config",
     "parent_folder": "Parent Folder",
     "api_path": "API Path",
     "method": "Request Method",
