refactor(ui): 统一 Space 组件的 direction 属性为 orientation
- 将 BatchCreateDrawer 中的 Space direction 属性改为 orientation
- 更新 CodeView 组件中的 Space direction 为 orientation
- 修改 DataMappingForm 中的 Space direction 属性为 orientation
- 调整 DebugPanel 中多个 Space 组件的 direction 为 orientation
- 更新 DetailPanel 中的 Space direction 属性为 orientation
- 修改 EditPanel 中的 Space direction 为 orientation
- 更正 .cursor/rules.md 中的 Space direction 属性为 orientation
- 更新 UserTasksDrawer 中 Steps 组件的 direction 为 orientation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,6 +6,10 @@
     "parent_folder": "Parent Folder",
     "api_path": "API Path",
     "method": "Request Method",
+    "graphql": {
+      "placeholder": "Click the button on the right to configure GraphQL",
+      "open_editor": "Open GraphQL Editor"
+    },
     "data_mapping": {
       "title": "Data Mapping",
       "input": "Input Settings",
