feat(api): 更新API执行配置相关国际化文案
- 修改"Execute Config"为"Execution"
- 添加前置脚本、后置脚本相关的中英文国际化字段
- 在ExecutionForm.tsx中将硬编码文本替换为国际化引用
- 更新脚本编辑器标题和描述的国际化支持
- 完善GraphQL查询相关文本的国际化处理

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,7 +2,7 @@
   "api": "API",
   "apis": {
     "name": "API Name",
-    "execution_config": "Execute Config",
+    "execution_config": "Execution",
     "parent_folder": "Parent Folder",
     "api_path": "API Path",
     "method": "Request Method",
@@ -328,6 +328,15 @@
   "login_failed": "Login failed",
   "login_invalid_credentials": "Invalid username or password",
   "remember_me": "Remember me",
+  "apis.execution.pre_script": "Pre Script",
+  "apis.execution.post_script": "Post Script",
+  "apis.execution.graphql_query": "GraphQL Query",
+  "apis.execution.open_pre_script_editor": "Open Pre Script Editor",
+  "apis.execution.open_post_script_editor": "Open Post Script Editor",
+  "apis.execution.pre_script_editor": "Pre Script Editor",
+  "apis.execution.post_script_editor": "Post Script Editor",
+  "apis.execution.pre_script_description": "Please enter pre-script content. This script will run before the GraphQL query executes.",
+  "apis.execution.post_script_description": "Please enter post-script content. This script will run after the GraphQL query executes.",
   "forgot_password": "Forgot password?",
   "demo_credentials": "Demo: admin / admin123",
   "demo_login_button": "Login with Demo Account",
