--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -328,6 +328,15 @@
   "login_success": "登录成功",
   "login_failed": "登录失败",
   "login_invalid_credentials": "用户名或密码错误",
+  "apis.execution.pre_script": "前置脚本",
+  "apis.execution.post_script": "后置脚本",
+  "apis.execution.graphql_query": "GraphQL 查询",
+  "apis.execution.open_pre_script_editor": "打开前置脚本编辑器",
+  "apis.execution.open_post_script_editor": "打开后置脚本编辑器",
+  "apis.execution.pre_script_editor": "前置脚本编辑器",
+  "apis.execution.post_script_editor": "后置脚本编辑器",
+  "apis.execution.pre_script_description": "请输入前置脚本内容，该脚本将在GraphQL查询执行前运行。",
+  "apis.execution.post_script_description": "请输入后置脚本内容，该脚本将在GraphQL查询执行后运行。",
   "remember_me": "记住我",
   "forgot_password": "忘记密码？",
   "demo_credentials": "演示账号：admin / admin123",
