feat(custom-api): 优化编辑面板表单布局和国际化支持
- 调整 AuthorizationForm 和 DataMappingForm 的标签列宽比例
- 移除 DataMappingForm 中冗余的 Typography 组件引用
- 将 DataMappingForm 布局从 vertical 改为 horizontal
- ExecutionForm 新增执行类型选项及前后置脚本编辑功能
- 重构 ExecutionForm 表单逻辑，增加数据变化监听与防抖处理
- 完善中英文本地化文案，补充缺失的提示语翻译
- 修复历史记录操作相关提示信息未国际化的缺陷
- 统一调试面板错误提示信息的语言一致性

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,9 +6,27 @@
     "parent_folder": "Parent Folder",
     "api_path": "API Path",
     "method": "Request Method",
+    "detail": "Detail",
+    "edit": "Edit",
+    "debug": "Debug",
+    "select_api": "Please select an API",
+    "get_history_failed": "Failed to get history records",
+    "header_format_error": "Invalid request header format, please enter valid JSON",
+    "request_failed": "Request failed",
+    "version": "Version: {{version}}",
+    "unknown_operator": "-",
+    "restore_success": "Restored: {{title}}",
+    "restore_failed": "Restore failed",
     "graphql": {
       "placeholder": "Click the button on the right to configure GraphQL",
       "open_editor": "Open GraphQL Editor"
+    },
+    "execution": {
+      "execution_type": "Execution Type",
+      "pre_script": "Pre Script",
+      "open_pre_script_editor": "Open Pre Script Editor",
+      "post_script": "Post Script",
+      "open_post_script_editor": "Open Post Script Editor"
     },
     "data_mapping": {
       "title": "Data Mapping",
