fix(i18n): 修复数据映射标题翻译错误
- 修正英文翻译文件中数据映射标题从"Data Mapping"改为"Doucment"
- 修正中文翻译文件中数据映射标题从"数据映射"改为"文档"

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -29,7 +29,7 @@
       "open_post_script_editor": "Open Post Script Editor"
     },
     "data_mapping": {
-      "title": "Data Mapping",
+      "title": "Doucment",
       "input": "Input Settings",
       "output": "Output Settings",
       "input_script": "Execution input script",
