--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -29,7 +29,7 @@
       "open_post_script_editor": "打开后置脚本编辑器"
     },
     "data_mapping": {
-      "title": "数据映射",
+      "title": "文档",
       "input": "入参设置",
       "output": "出参设置",
       "input_script": "输入脚本",
