refactor(datasource): 重构数据源浏览器组件以支持URL参数同步
- 将数据源列表获取逻辑从父组件移动到DataSourceExplorer内部
- 添加loading状态和Spin组件提升用户体验
- 实现数据源选择与URL参数的双向同步功能
- 添加selectedModelName参数支持URL中的模型选择
- 修复国际化字符串中的HTML标签格式问题
- 优化组件状态管理减少不必要的重渲染

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -461,7 +461,7 @@
   "connection_name_required": "Please enter connection name",
   "connection_name_placeholder": "Please enter connection name",
   "delete_datasource_confirm": "Delete '{{name}}'?",
-  "delete_datasource_confirm_desc": "Are you sure you want to delete <strong>{{name}}</strong>?",
+  "delete_datasource_confirm_desc": "Are you sure you want to delete{{name}}?",
   "delete_datasource_success": "Deleted successfully",
   "delete_datasource_failed": "Failed to delete datasource",
   "export_models_title": "Export {{name}} models",
