--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -464,7 +464,7 @@
   "connection_name_required": "请输入连接名称",
   "connection_name_placeholder": "请输入连接名称",
   "delete_datasource_confirm": "确定要删除 '{{name}}' 吗？",
-  "delete_datasource_confirm_desc": "您确定要删除 <strong>{{name}}</strong> 吗？",
+  "delete_datasource_confirm_desc": "您确定要删除{{name}}吗？",
   "delete_datasource_success": "删除成功",
   "delete_datasource_failed": "删除数据源失败",
   "export_models_title": "导出 {{name}} 模型",
