feat(api): 添加API执行脚本功能
- 在ApiMeta类型定义中添加可选的executionScript字段
- 为执行脚本功能添加英文和中文本地化词条
- 在ExecutionForm组件中实现脚本编辑器的显示和状态管理
- 添加脚本执行类型切换功能，支持GraphQL和Script两种模式
- 实现脚本编辑器的打开、保存和关闭逻辑
- 修复表单值变化处理逻辑以保持executionType的正确性
- 优化GraphQL编辑器的数据传递结构

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -26,7 +26,13 @@
       "pre_script": "Pre Script",
       "open_pre_script_editor": "Open Pre Script Editor",
       "post_script": "Post Script",
-      "open_post_script_editor": "Open Post Script Editor"
+      "open_post_script_editor": "Open Post Script Editor",
+      "execution_script": "Execution Script",
+      "script_placeholder": "Click the button on the right to configure execution script",
+      "open_script_editor": "Open Execution Script Editor",
+      "script_editor": "Execution Script Editor",
+      "script_description": "Write JavaScript for execution logic",
+      "script": "Script"
     },
     "data_mapping": {
       "title": "Doucment",
