--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -26,7 +26,13 @@
       "pre_script": "前置脚本",
       "open_pre_script_editor": "打开前置脚本编辑器",
       "post_script": "后置脚本",
-      "open_post_script_editor": "打开后置脚本编辑器"
+      "open_post_script_editor": "打开后置脚本编辑器",
+      "execution_script": "执行脚本",
+      "script_placeholder": "点击右侧按钮配置执行脚本",
+      "open_script_editor": "打开执行脚本编辑器",
+      "script_editor": "执行脚本编辑器",
+      "script_description": "编写用于执行逻辑的 JavaScript 代码",
+      "script": "脚本"
     },
     "data_mapping": {
       "title": "文档",
