refactor(api): 重命名数据映射为文档配置
- 将 DataMappingConfig 重命名为 documentConfig
- 将 DataMappingIOConfig 重命名为 documentIOConfig
- 将 DetailPanel 中的数据映射相关标签更新为文档
- 重命名 DataMappingForm 组件为 DocumentForm
- 更新 EditPanel 中的数据映射标签为文档
- 修改 FlowDesign 中的 dataMapping 字段为 document
- 更新多语言文件中的 data_mapping 为 document
- 修复脚本编辑器模态框中的标签引用

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -34,7 +34,7 @@
       "script_description": "Write JavaScript for execution logic",
       "script": "Script"
     },
-    "data_mapping": {
+    "document": {
       "title": "Doucment",
       "input": "Input Settings",
       "output": "Output Settings",
